<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChipCounter">

    <TextView
        android:id="@+id/currentPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="player name "
        android:textSize="36sp" />

    <TextView
        android:id="@+id/potTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="122dp"
        android:text="pot"
        android:textSize="36sp" />

    <Button
        android:id="@+id/checkOrCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="49dp"
        android:onClick="checkOrCallClick"
        android:text="@string/takePot" />

    <Button
        android:id="@+id/betOrRaise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="betOrRaiseClick"
        android:text="@string/addMoney" />

    <Button
        android:id="@+id/fold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="49dp"
        android:onClick="foldClick"
        android:text="@string/nextPlayer" />

    <EditText
        android:id="@+id/betText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkOrCall"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/p1Cash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="p1cash BB" />

    <TextView
        android:id="@+id/p2Cash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:text="p2cash SB" />

    <TextView
        android:id="@+id/p3Cash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="52dp" />

    <TextView
        android:id="@+id/p4Cash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="78dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/currentPlayer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-36dp"
        android:text="@string/currentPlayer" />

    <Switch
        android:id="@+id/manualSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:checked="false"
        android:text="Manual Edit"
        android:visibility="visible"
        tools:checked="false" />

    <TextView
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/p3Cash"
        android:text="Player 1" />

    <TextView
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="113dp"
        android:text="Player 2" />

    <TextView
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="137dp"
        android:text="Player 3" />

    <TextView
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/betText"
        android:layout_alignParentStart="true"
        android:text="Player 4" />

    <EditText
        android:id="@+id/oneMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="78dp"
        android:layout_marginTop="63dp"
        android:ems="10"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/twoMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/oneMoney"
        android:layout_alignTop="@+id/two"
        android:ems="10"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/threeMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/oneMoney"
        android:layout_alignTop="@+id/three"
        android:ems="10"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/fourMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/oneMoney"
        android:layout_alignTop="@+id/four"
        android:ems="10"
        android:inputType="numberSigned" />

    <Button
        android:id="@+id/manualButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/potTextView"
        android:layout_marginEnd="64dp"
        android:onClick="manualClick"
        android:text="Confirm" />

    <TextView
        android:id="@+id/cashChanged"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/four"
        android:layout_alignStart="@+id/manualButton"
        android:text="Cash updated!" />

</RelativeLayout>